WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173992
Calculating postCapacity in unshiftCountSlowCase is wrong
https://bugs.webkit.org/show_bug.cgi?id=173992
Summary
Calculating postCapacity in unshiftCountSlowCase is wrong
Saam Barati
Reported
2017-06-29 16:32:20 PDT
It'll use more memory than it has allocated.
Attachments
patch
(4.06 KB, patch)
2017-06-29 17:16 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2017-06-29 16:33:00 PDT
<
rdar://problem/32283199
>
Saam Barati
Comment 2
2017-06-29 17:16:48 PDT
Created
attachment 314191
[details]
patch
Keith Miller
Comment 3
2017-06-29 17:18:32 PDT
Comment on
attachment 314191
[details]
patch Seems reasonable r=me.
WebKit Commit Bot
Comment 4
2017-06-29 17:58:21 PDT
Comment on
attachment 314191
[details]
patch Clearing flags on attachment: 314191 Committed
r218977
: <
http://trac.webkit.org/changeset/218977
>
WebKit Commit Bot
Comment 5
2017-06-29 17:58:22 PDT
All reviewed patches have been landed. Closing bug.
Keith Miller
Comment 6
2017-06-30 06:39:14 PDT
It looks like your test is timing out in debug:
https://build.webkit.org/builders/Apple%20Sierra%20Debug%20JSC%20(Tests)/builds/605/steps/jscore-test/logs/stdio
Saam Barati
Comment 7
2017-07-03 11:07:28 PDT
(In reply to Keith Miller from
comment #6
)
> It looks like your test is timing out in debug: > >
https://build.webkit.org/builders/Apple%20Sierra%20Debug%20JSC%20(Tests)/
> builds/605/steps/jscore-test/logs/stdio
I'll disable this test for debug builds.
Saam Barati
Comment 8
2017-07-03 11:23:17 PDT
(In reply to Saam Barati from
comment #7
)
> (In reply to Keith Miller from
comment #6
) > > It looks like your test is timing out in debug: > > > >
https://build.webkit.org/builders/Apple%20Sierra%20Debug%20JSC%20(Tests)/
> > builds/605/steps/jscore-test/logs/stdio > > I'll disable this test for debug builds.
https://trac.webkit.org/changeset/219079/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug